==> consp/lcd8-re/src/hal/lcd8h/at32f415/cntl.c <==
#include "controls.h"
#include "hal/lcd8/at32f415/cntl.h"
#include "at32f415_dma.h"
#include "at32f415_tmr.h"
#include "at32f415_crm.h"
#include "at32f415_exint.h"
#include "config.h"

static void adc_config(void) {
    adc_base_config_type adc_base_struct;
    crm_periph_clock_enable(CRM_ADC1_PERIPH_CLOCK, TRUE); // use default perph clock
    crm_adc_clock_div_set(CRM_ADC_DIV_6); //

    adc_base_default_para_init(&adc_base_struct);
    adc_base_struct.sequence_mode = TRUE;
    adc_base_struct.repeat_mode = FALSE;
    adc_base_struct.data_align = ADC_RIGHT_ALIGNMENT;
    adc_base_struct.ordinary_channel_length = 5;
    adc_base_config(ADC1, &adc_base_struct);
    adc_ordinary_channel_set(ADC1, ADC_CHANNEL_16, 1, ADC_SAMPLETIME_239_5);
    adc_ordinary_channel_set(ADC1, ADC_CHANNEL_17, 2, ADC_SAMPLETIME_239_5);
    adc_ordinary_channel_set(ADC1, VOLTAGE_DETECT_ADC_CH, 3, ADC_SAMPLETIME_239_5);
    adc_ordinary_channel_set(ADC1, EXT_TEMP_ADC_CH, 4, ADC_SAMPLETIME_239_5);
    adc_ordinary_channel_set(ADC1, NC_BUTTON_ADC_CH, 5, ADC_SAMPLETIME_239_5);

    adc_ordinary_conversion_trigger_set(ADC1, ADC12_ORDINARY_TRIG_SOFTWARE, TRUE);

    adc_dma_mode_enable(ADC1, TRUE);
    adc_tempersensor_vintrv_enable(TRUE); // required only for temp sensor

    adc_enable(ADC1, TRUE);
    adc_calibration_init(ADC1);
    while(adc_calibration_init_status_get(ADC1));
    adc_calibration_start(ADC1);
    while(adc_calibration_status_get(ADC1));

}

static void dma_config(void)
{
    dma_init_type dma_init_struct;
    crm_periph_clock_enable(CRM_DMA1_PERIPH_CLOCK, TRUE);
    dma_reset(DMA1_CHANNEL1);
    dma_default_para_init(&dma_init_struct);
    dma_init_struct.buffer_size = 5;
    dma_init_struct.direction = DMA_DIR_PERIPHERAL_TO_MEMORY;
    dma_init_struct.memory_base_addr = (uint32_t) &adc;
    dma_init_struct.memory_data_width = DMA_MEMORY_DATA_WIDTH_HALFWORD;
    dma_init_struct.memory_inc_enable = TRUE;
    dma_init_struct.peripheral_base_addr = (uint32_t)&(ADC1->odt);
    dma_init_struct.peripheral_data_width = DMA_PERIPHERAL_DATA_WIDTH_HALFWORD;
    dma_init_struct.peripheral_inc_enable = FALSE;
    dma_init_struct.priority = DMA_PRIORITY_HIGH;
    dma_init_struct.loop_mode_enable = TRUE;
    dma_init(DMA1_CHANNEL1, &dma_init_struct);
#if DMA_WRITE
    dma_flexible_config(DMA1, FLEX_CHANNEL1, DMA_FLEXIBLE_ADC1);
#endif
    dma_channel_enable(DMA1_CHANNEL1, TRUE);
}

static void tmr_config(void) {

    crm_periph_clock_enable(CRM_TMR9_PERIPH_CLOCK, TRUE);
    tmr_output_config_type tmr_oc_init_structure;
    /* tmre base configuration */

    tmr_base_init(TMR9,  BUTTON_MEASURE_PERIOD * 1000, TIMER_FREQ(1000000));
    tmr_cnt_dir_set(TMR9, TMR_COUNT_UP);
    tmr_clock_source_div_set(TMR9, TMR_CLOCK_DIV1);

    /* output compare toggle mode configuration: channel1 */
    tmr_output_default_para_init(&tmr_oc_init_structure);
    tmr_oc_init_structure.oc_mode = TMR_OUTPUT_CONTROL_SWITCH;
    tmr_oc_init_structure.oc_idle_state = FALSE;
    tmr_oc_init_structure.oc_polarity = TMR_OUTPUT_ACTIVE_LOW;
    tmr_oc_init_structure.oc_output_state = FALSE;
    tmr_output_channel_config(TMR9, TMR_SELECT_CHANNEL_1, &tmr_oc_init_structure);
    tmr_channel_value_set(TMR9, TMR_SELECT_CHANNEL_1, 1000);
    tmr_counter_enable(TMR9, TRUE);
    tmr_interrupt_enable(TMR9, TMR_C1_INT, TRUE);
    
    nvic_priority_group_config(NVIC_PRIORITY_GROUP_4);
    nvic_irq_enable(TMR1_BRK_TMR9_IRQn, 0, 0);
}

void controls_init(void) {
    // enable clocks
    crm_periph_clock_enable(CRM_GPIOA_PERIPH_CLOCK, TRUE);
    // configure pins
    //
    gpio_init_type gpio_initstructure;

    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL; // input
    gpio_initstructure.gpio_pull           = POWER_BUTTON_PULL; // external pullup
    gpio_initstructure.gpio_mode           = POWER_BUTTON_MODE;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_MAXIMUM; // input
    gpio_initstructure.gpio_pins           = POWER_BUTTON_PIN;
    gpio_init(POWER_BUTTON_GPIO, &gpio_initstructure);

    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL; // input
    gpio_initstructure.gpio_pull           = UP_BUTTON_PULL; // external pullup
    gpio_initstructure.gpio_mode           = UP_BUTTON_MODE;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_MAXIMUM; // input
    gpio_initstructure.gpio_pins           = UP_BUTTON_PIN;
    gpio_init(UP_BUTTON_GPIO, &gpio_initstructure);

    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL; // input
    gpio_initstructure.gpio_pull           = DOWN_BUTTON_PULL; // external pullup
    gpio_initstructure.gpio_mode           = DOWN_BUTTON_MODE;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_MAXIMUM; // input
    gpio_initstructure.gpio_pins           = DOWN_BUTTON_PIN;
    gpio_init(DOWN_BUTTON_GPIO, &gpio_initstructure);

    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL; // input
    gpio_initstructure.gpio_pull           = POWER_LATCH_PULL; // external pullup
    gpio_initstructure.gpio_mode           = POWER_LATCH_MODE;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_MAXIMUM; // input
    gpio_initstructure.gpio_pins           = POWER_LATCH_PIN;
    gpio_init(POWER_LATCH_GPIO, &gpio_initstructure);

    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL; // input
    gpio_initstructure.gpio_pull           = VOLTAGE_DETECT_PULL; // external pullup
    gpio_initstructure.gpio_mode           = VOLTAGE_DETECT_MODE;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_MAXIMUM; // input
    gpio_initstructure.gpio_pins           = VOLTAGE_DETECT_PIN;
    gpio_init(VOLTAGE_DETECT_GPIO, &gpio_initstructure);

    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL; // input
    gpio_initstructure.gpio_pull           = NC_BUTTON_PULL; // external pullup
    gpio_initstructure.gpio_mode           = NC_BUTTON_MODE;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_MAXIMUM; // input
    gpio_initstructure.gpio_pins           = NC_BUTTON_PIN;
    gpio_init(NC_BUTTON_GPIO, &gpio_initstructure);

#ifdef LEXT_INSTALLED
    /* gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL; // input */
    /* gpio_initstructure.gpio_pull           = GPIO_PULL_NONE; // external pullup */
    /* gpio_initstructure.gpio_mode           = GPIO_MODE_MUX; */
    /* gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_MAXIMUM; // input */
    /* gpio_initstructure.gpio_pins           = GPIO_PINS_3; */
    /* gpio_init(VOLTAGE_DETECT_GPIO, &gpio_initstructure); */
#endif

    // configure ADC
    //
    dma_config();
    adc_config();
    tmr_config();

}

void power_enable(void) { POWER_LATCH_GPIO->scr = POWER_LATCH_PIN; }

void power_disable(void) { 
    // cap should keep it fed for a while
    POWER_LATCH_GPIO->clr = POWER_LATCH_PIN; 
#if LEXT_INSTALLED
    // keep alive on batt power
    // if not backup batt installed brownout will happen
    /* EXINT->inten |= EXINT_LINE_6; */
    /* pwc_voltage_regulate_set(PWC_REGULATOR_LOW_POWER); // does almost nothing */
    /* pwc_deep_sleep_mode_enter(PWC_DEEP_SLEEP_ENTER_WFI);  */
    // goes to deepsleep, power consumption in deepsleep and standby is the same (mostly leakage anyway)
    // recover on interrupt

    /* wait clock stable */
    /* for(int index = 0; index < 300; index++) */
    /* { */
    /*   __NOP(); */
    /* } */
    /* pwc_voltage_regulate_set(PWC_REGULATOR_ON); */
    /*  */
    /* // reset */
    /* NVIC_SystemReset(); */
#endif
}

static inline int power_button_measure(void) {
    if (POWER_BUTTON_MODE == GPIO_MODE_INPUT) return (POWER_BUTTON_GPIO->idt & (POWER_BUTTON_PIN)) > 0;
    return adc.power_button <= 10;
}

static inline int down_button_measure(void) {
    if (DOWN_BUTTON_MODE == GPIO_MODE_INPUT) return (DOWN_BUTTON_GPIO->idt & (DOWN_BUTTON_PIN)) == 0;
    return adc.down_button <= 10;
}

static inline int nc_button_measure(void) {
    if (NC_BUTTON_MODE == GPIO_MODE_INPUT) return (NC_BUTTON_GPIO->idt & (NC_BUTTON_PIN)) > 0;
    return adc.nc_button <= 10;
}

int32_t int_temp(void) {
    // data from artery example code converted to return 24.8s fixed point format
#define ADC_TEMP_BASE                    ((int32_t)(1638))
#define ADC_TEMP_SLOPE                   ((int32_t)(-4551))
    return (((ADC_TEMP_BASE - adc.temperature_int) << 16) / ADC_TEMP_SLOPE) + (25 << 8);
}
