==> consp/lcd8-re/src/hal/custom/stm32h743/cntl.c <==
#include "controls.h"
#include "comm.h"
#include "delay.h"
#include "lcd.h"
#include "hal/custom/stm32h743/cntl.h"
#include "config.h"
#include "eeprom.h"
#include "gui.h"
#include "stm32h743.h"

static void adc_config(void) {

    GPIO_InitTypeDef GPIO_InitStruct = {0};
    RCC_PeriphCLKInitTypeDef PeriphClkInitStruct = {0};
    PeriphClkInitStruct.PeriphClockSelection = RCC_PERIPHCLK_ADC;
    PeriphClkInitStruct.AdcClockSelection = RCC_ADCCLKSOURCE_CLKP;
    if (HAL_RCCEx_PeriphCLKConfig(&PeriphClkInitStruct) != HAL_OK)
    {
      Error_Handler();
    }
    /* Peripheral clock enable */
    __HAL_RCC_ADC12_CLK_ENABLE();
    __HAL_RCC_ADC3_CLK_ENABLE();

    __HAL_RCC_GPIOC_CLK_ENABLE();
    __HAL_RCC_GPIOA_CLK_ENABLE();
    __HAL_RCC_GPIOB_CLK_ENABLE();
    /**ADC2 GPIO Configuration
    PC1     ------> ADC2_INP11
    PA5     ------> ADC2_INP19
    PA6     ------> ADC2_INP3
    PB0     ------> ADC2_INP9
    */
    GPIO_InitStruct.Pin = BTN_UP_Pin;
    GPIO_InitStruct.Mode = GPIO_MODE_ANALOG;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    HAL_GPIO_Init(BTN_UP_GPIO_Port, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = ADC_VBUS_Pin|ADC_PHOTO_Pin;
    GPIO_InitStruct.Mode = GPIO_MODE_ANALOG;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = ADC_NTC_Pin;
    GPIO_InitStruct.Mode = GPIO_MODE_ANALOG;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    HAL_GPIO_Init(ADC_NTC_GPIO_Port, &GPIO_InitStruct);


    ADC_ChannelConfTypeDef sConfig = {0};

    /** Common config
    */
    hadc2.Instance = ADC2;
    hadc2.Init.ClockPrescaler = ADC_CLOCK_ASYNC_DIV64;
    hadc2.Init.Resolution = ADC_RESOLUTION_16B;
    hadc2.Init.ScanConvMode = ADC_SCAN_ENABLE;
    hadc2.Init.EOCSelection = ADC_EOC_SEQ_CONV;
    hadc2.Init.LowPowerAutoWait = DISABLE;
    hadc2.Init.ContinuousConvMode = DISABLE;
    hadc2.Init.NbrOfConversion = 3;
    hadc2.Init.DiscontinuousConvMode = DISABLE;
    hadc2.Init.ExternalTrigConv = ADC_EXTERNALTRIG_T3_TRGO;
    hadc2.Init.ExternalTrigConvEdge = ADC_EXTERNALTRIGCONVEDGE_RISING;
    hadc2.Init.ConversionDataManagement = ADC_CONVERSIONDATA_DMA_CIRCULAR;
    hadc2.Init.Overrun = ADC_OVR_DATA_PRESERVED;
    hadc2.Init.LeftBitShift = ADC_LEFTBITSHIFT_NONE;
    hadc2.Init.OversamplingMode = DISABLE;
    hadc2.Init.Oversampling.Ratio = 1;
    unsigned int rv = 0;
    if ((rv = HAL_ADC_Init(&hadc2)) != HAL_OK)
    {
        LV_LOG_ERROR("Failed to init adc2: %08X", rv);
        Error_Handler();
    }

    /** Configure Regular Channel
    */
    sConfig.Channel = ADC_CHANNEL_3;
    sConfig.Rank = ADC_REGULAR_RANK_1;
    sConfig.SamplingTime = ADC_SAMPLETIME_810CYCLES_5;
    sConfig.SingleDiff = ADC_SINGLE_ENDED;
    sConfig.OffsetNumber = ADC_OFFSET_NONE;
    sConfig.Offset = 0;
    sConfig.OffsetSignedSaturation = DISABLE;
    if (HAL_ADC_ConfigChannel(&hadc2, &sConfig) != HAL_OK)
    {
        Error_Handler();
    }

    /** Configure Regular Channel
    */
    sConfig.Channel = ADC_CHANNEL_9;
    sConfig.Rank = ADC_REGULAR_RANK_2;
    if (HAL_ADC_ConfigChannel(&hadc2, &sConfig) != HAL_OK)
    {
        Error_Handler();
    }

    /* #<{(|* Configure Regular Channel */
    /* |)}># */
    /* sConfig.Channel = ADC_CHANNEL_11; */
    /* sConfig.Rank = ADC_REGULAR_RANK_3; */
    /* if (HAL_ADC_ConfigChannel(&hadc2, &sConfig) != HAL_OK) */
    /* { */
    /*     Error_Handler(); */
    /* } */

    /** Configure Regular Channel
    */
    sConfig.Channel = ADC_CHANNEL_19;
    sConfig.Rank = ADC_REGULAR_RANK_3;
    if (HAL_ADC_ConfigChannel(&hadc2, &sConfig) != HAL_OK)
    {
        Error_Handler();
    }
    /* if (HAL_ADCEx_Calibration_Start(&hadc2, ADC_CALIB_OFFSET_LINEARITY, ADC_SINGLE_ENDED) != HAL_OK) */
    /* { */
    /*     Error_Handler(); */
    /* } */
  

    /** Common config
    */
    hadc3.Instance = ADC3;
    hadc3.Init.ClockPrescaler = ADC_CLOCK_ASYNC_DIV64;
    hadc3.Init.Resolution = ADC_RESOLUTION_16B;
    hadc3.Init.ScanConvMode = ADC_SCAN_ENABLE;
    hadc3.Init.EOCSelection = ADC_EOC_SEQ_CONV;
    hadc3.Init.LowPowerAutoWait = DISABLE;
    hadc3.Init.ContinuousConvMode = DISABLE;
    hadc3.Init.NbrOfConversion = 4;
    hadc3.Init.DiscontinuousConvMode = DISABLE;
    hadc3.Init.ExternalTrigConv = ADC_EXTERNALTRIG_T3_TRGO;
    hadc3.Init.ExternalTrigConvEdge = ADC_EXTERNALTRIGCONVEDGE_RISING;
    hadc3.Init.ConversionDataManagement = ADC_CONVERSIONDATA_DMA_CIRCULAR;
    hadc3.Init.Overrun = ADC_OVR_DATA_PRESERVED;
    hadc3.Init.LeftBitShift = ADC_LEFTBITSHIFT_NONE;
    hadc3.Init.OversamplingMode = DISABLE;
    hadc3.Init.Oversampling.Ratio = 1;
    if (HAL_ADC_Init(&hadc3) != HAL_OK)
    {
        Error_Handler();
    }

    /** Configure Regular Channel
    */
    sConfig.Channel = ADC_CHANNEL_0;
    sConfig.Rank = ADC_REGULAR_RANK_1;
    sConfig.SamplingTime = ADC_SAMPLETIME_810CYCLES_5;
    sConfig.SingleDiff = ADC_SINGLE_ENDED;
    sConfig.OffsetNumber = ADC_OFFSET_NONE;
    sConfig.Offset = 0;
    sConfig.OffsetSignedSaturation = DISABLE;
    if (HAL_ADC_ConfigChannel(&hadc3, &sConfig) != HAL_OK)
    {
        Error_Handler();
    }

    sConfig.Channel = ADC_CHANNEL_TEMPSENSOR;
    sConfig.Rank = ADC_REGULAR_RANK_2;
    if (HAL_ADC_ConfigChannel(&hadc3, &sConfig) != HAL_OK)
    {
        Error_Handler();
    }


    /** Configure Regular Channel
    */
    sConfig.Channel = ADC_CHANNEL_VBAT;
    sConfig.Rank = ADC_REGULAR_RANK_3;
    if (HAL_ADC_ConfigChannel(&hadc3, &sConfig) != HAL_OK)
    {
        Error_Handler();
    }

    /** Configure Regular Channel
    */
    sConfig.Channel = ADC_CHANNEL_VREFINT;
    sConfig.Rank = ADC_REGULAR_RANK_4;
    if (HAL_ADC_ConfigChannel(&hadc3, &sConfig) != HAL_OK)
    {
        Error_Handler();
    }

    /* if (HAL_ADCEx_Calibration_Start(&hadc3, ADC_CALIB_OFFSET_LINEARITY, ADC_SINGLE_ENDED) != HAL_OK) */
    /* { */
    /*     Error_Handler(); */
    /* } */
}

static void dma_config(void)
{
    __HAL_RCC_DMA1_CLK_ENABLE();
    /* ADC2 DMA Init */
    /* ADC2 Init */
    hdma_adc2.Instance = DMA1_Stream2;
    hdma_adc2.Init.Request = DMA_REQUEST_ADC2;
    hdma_adc2.Init.Direction = DMA_PERIPH_TO_MEMORY;
    hdma_adc2.Init.PeriphInc = DMA_PINC_DISABLE;
    hdma_adc2.Init.MemInc = DMA_MINC_ENABLE;
    hdma_adc2.Init.PeriphDataAlignment = DMA_PDATAALIGN_HALFWORD;
    hdma_adc2.Init.MemDataAlignment = DMA_MDATAALIGN_HALFWORD;
    hdma_adc2.Init.Mode = DMA_CIRCULAR;
    hdma_adc2.Init.Priority = DMA_PRIORITY_HIGH;
    hdma_adc2.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
    if (HAL_DMA_Init(&hdma_adc2) != HAL_OK)
    {
      Error_Handler();
    }

    __HAL_LINKDMA(&hadc2,DMA_Handle,hdma_adc2);

    hdma_adc3.Instance = DMA1_Stream3;
    hdma_adc3.Init.Request = DMA_REQUEST_ADC3;
    hdma_adc3.Init.Direction = DMA_PERIPH_TO_MEMORY;
    hdma_adc3.Init.PeriphInc = DMA_PINC_DISABLE;
    hdma_adc3.Init.MemInc = DMA_MINC_ENABLE;
    hdma_adc3.Init.PeriphDataAlignment = DMA_PDATAALIGN_HALFWORD;
    hdma_adc3.Init.MemDataAlignment = DMA_MDATAALIGN_HALFWORD;
    hdma_adc3.Init.Mode = DMA_CIRCULAR;
    hdma_adc3.Init.Priority = DMA_PRIORITY_HIGH;
    hdma_adc3.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
    if (HAL_DMA_Init(&hdma_adc3) != HAL_OK)
    {
      Error_Handler();
    }


    __HAL_LINKDMA(&hadc3,DMA_Handle,hdma_adc3);

    HAL_NVIC_SetPriority(DMA1_Stream3_IRQn, 0, 0);
    HAL_NVIC_EnableIRQ(DMA1_Stream3_IRQn);

    if (HAL_ADC_Start_DMA(&hadc3, (uint32_t*) &adc3, 4) != HAL_OK) {
        Error_Handler();
    }

    HAL_NVIC_SetPriority(DMA1_Stream2_IRQn, 0, 0);
    HAL_NVIC_EnableIRQ(DMA1_Stream2_IRQn);

    if (HAL_ADC_Start_DMA(&hadc2, (uint32_t*) &adc2, 3) != HAL_OK) {
        Error_Handler();
    }
    /* ADC_STATE_CLR_SET(hadc3.State, */
    /*                       HAL_ADC_STATE_READY | HAL_ADC_STATE_REG_EOC | HAL_ADC_STATE_REG_OVR | HAL_ADC_STATE_REG_EOSMP, */
    /*                       HAL_ADC_STATE_REG_BUSY); */
    /* __HAL_ADC_CLEAR_FLAG(&hadc3, (ADC_FLAG_EOC | ADC_FLAG_EOS | ADC_FLAG_OVR)); */
    /* LL_ADC_REG_SetDataTransferMode(hadc3.Instance, ADC_CFGR_DMACONTREQ((uint32_t)hadc3.Init.ConversionDataManagement)); */
    /* LL_ADC_REG_StartConversion(hadc3.Instance); */
    /* DMA_Base_Registers  *regs_dma  = (DMA_Base_Registers *)hdma_adc3.StreamBaseAddress; */
    /*  */
    /* regs_dma->IFCR = 0x3FUL << (hdma_adc3.StreamIndex & 0x1FU); */
    /* DMA1_Stream3->CR &= (uint32_t)(~DMA_SxCR_DBM); */
    /* DMA1_Stream3->NDTR = 4; */
    /* DMA1_Stream3->PAR = (uint32_t)&hadc3.Instance->DR; */
    /* DMA1_Stream3->M0AR = (uint32_t) &adc3; */
    /*  */
    /* __HAL_DMA_ENABLE_IT(&hdma_adc3, DMA_IT_TC);  */
    /* __HAL_DMA_ENABLE(&hdma_adc3); */

    DMA1_Stream3->CR &= ~(DMA_IT_TE | DMA_IT_HT | DMA_IT_FE | DMA_IT_DME);
    DMA1_Stream2->CR &= ~(DMA_IT_TE | DMA_IT_HT | DMA_IT_FE | DMA_IT_DME);
}

static void tmr_config(void) {
    __HAL_RCC_TIM3_CLK_ENABLE();
    TIM_ClockConfigTypeDef sClockSourceConfig = {0};
    TIM_MasterConfigTypeDef sMasterConfig = {0};

    htim3.Instance = TIM3;
    htim3.Init.Prescaler = 24000-1;
    htim3.Init.CounterMode = TIM_COUNTERMODE_UP;
    htim3.Init.Period = 10000; // once every second
    htim3.Init.ClockDivision = TIM_CLOCKDIVISION_DIV4;
    htim3.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_ENABLE;
    if (HAL_TIM_Base_Init(&htim3) != HAL_OK)
    {
        Error_Handler();
    }
    sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
    if (HAL_TIM_ConfigClockSource(&htim3, &sClockSourceConfig) != HAL_OK)
    {
        Error_Handler();
    }
    sMasterConfig.MasterOutputTrigger = TIM_TRGO_UPDATE;
    sMasterConfig.MasterOutputTrigger2 = TIM_TRGO2_RESET;
    sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
    if (HAL_TIMEx_MasterConfigSynchronization(&htim3, &sMasterConfig) != HAL_OK)
    {
        Error_Handler();
    }

    HAL_TIM_Base_Start(&htim3);

}

void controls_init(void) {
    LV_LOG_INFO("ADC Initialization");
    adc_config();
    LV_LOG_INFO("TMR Initialization");
    tmr_config();
    LV_LOG_INFO("DMA Initialization");
    dma_config();
    LV_LOG_INFO("GPIO Initialization");
    gpio_config();
}

CRITICAL void power_enable(void) {
    HAL_GPIO_WritePin(PWR_EN_GPIO_Port, PWR_EN_Pin, GPIO_PIN_SET); 
    HAL_GPIO_WritePin(CNT_PWR_GPIO_Port, CNT_PWR_Pin, GPIO_PIN_SET); 
    HAL_GPIO_WritePin(LED1_GPIO_Port, LED1_Pin, GPIO_PIN_SET); 
}

CRITICAL void power_disable(void) { 
    lcd_backlight(0); // "show off"
#if UART_COMM == UART_COMM_VESC
    comm_vesc_packet_send_shutdown();
#endif
    // cap should keep it fed for a while
}

static inline int power_button_measure(void) {
    return (BTN_PWR_GPIO_Port->IDR & (BTN_PWR_Pin)) == 0;
}

static inline int down_button_measure(void) {
    return (BTN_DOWN_GPIO_Port->IDR & (BTN_DOWN_Pin)) == 0;
}

static inline int nc_button_measure(void) {
    return (BTN_M_GPIO_Port->IDR & (BTN_M_Pin)) == 0;
}

int32_t int_temp(void) {
    // data from artery example code converted to return 24.8s fixed point format
    return (int32_t) (256 * ntc_calc(adc2.ntc_internal, 1, 33000.0f));
}
